--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "cross-domain",
     "http-proxy",
     "proxy",
-    "heroku"
+    cyclic"
   ],
-  "main": "./lib/cors-anywhere.js",
+  "main": "lib/cors-anywhere.js",
   "files": [
     "lib/",
     "test/",
@@ -41,6 +41,7 @@
     "supertest": "^2.0.1"
   },
   "scripts": {
+    "start": "node index.js",
     "lint": "eslint .",
     "test": "mocha ./test/test*.js --reporter spec",
     "test-coverage": "istanbul cover ./node_modules/.bin/_mocha -- test/test.js test/test-ratelimit.js --reporter spec"
